# speedrun

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/: WMIwrapper.h  platform.h  pyhelper.hpp  speedrun.h
include/clean/: cache.h  clean.h  temporary.h
include/generator/: generator.h  keygen.h
include/mount/: mount.h  mount_pkgb.h
include/regedit/: regedit.h  registry.h
include/utils/: bexec.h  directory.h  string.h  stringutils.h  subprocess.h
src/libs/clear/: CMakeLists.txt  cache.cpp  keygen.cpp  mount_pkgb.cpp  regedit.cpp  temporary.cpp
src/libs/clear/windows/: cache.cpp  temporary.cpp
src/libs/perf/: init_hkeys.py
